--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,14 +10,13 @@ rust-version = "1.75"
 [dependencies]
 anyhow = "1.0.89"
 thiserror = "1.0.63"
-
+serde_json = "1"
 typed-builder = "0.20.0"
 time = "0.3.30"
 rand = "0.8.5"
 moka = { version = "0.12.8", default-features = false, features = ["sync"] }
 tokio = { version = "1.40.0", default-features = false, features = ["macros", "signal", "rt-multi-thread"] }
 hyper = { version = "0.14", features = ["client", "http1", "server", "tcp", "stream"] }
-
 bytes = "1.7.2"
 http = "0.2.12"
 
@@ -31,7 +30,7 @@ rustls = { version = "0.21.8", features = ["dangerous_configuration"] }
 rustls-pemfile = "1.0.4"
 
 # client
-rquest = { version ="0.20", features = ["full"] }
+reqwest = { version ="0.11", default-features = false, features = ["stream", "socks", "rustls-tls"]}
 
 # log
 tracing = { version = "0.1.40" }
